# portman

./: .gitignore  BUILD-REPORT.md  LAUNCH-PLAN.md  PRIVACY.md  README.md  TEST-REPORT.md  portman.py  pyproject.toml  screenshots.md  store-listing.md
landing/: index.html
launch/: landing.md  pricing.md  store-listing.md
screenshots/: screenshot1.txt  screenshot2.txt  screenshot3.txt  terminal-demo.txt
