[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shipstack-portman"
version = "0.1.0"
description = "A zero-dependency CLI that finds and kills processes on localhost ports"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Eric JOYE", email = "eric@ericjoye.com"},
]
keywords = ["cli", "port", "localhost", "developer-tools", "devops"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]

[project.scripts]
portman = "portman:main"

[project.urls]
Homepage = "https://github.com/ericjoye/portman"
Issues = "https://github.com/ericjoye/portman/issues"

[tool.hatch.build.targets.wheel]
packages = ["portman"]
